# demo-nrf52840-dk

./: .drone.yml  .gdbinit  .gitignore  .lager  CMakeLists.txt  Makefile  Makefile.posix  README.md
.github/workflows/: build-and-flash.yml  build-flash-and-run-simple.yml  env_var_test.yml  workflow.yml
_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
_build/app/: app  app.hex  cmake_install.cmake
_build/modules/: cmake_install.cmake
_build/unit-tests/: cmake_install.cmake
_build/unit-tests/test-suites/: cmake_install.cmake
_build/unit-tests/test-suites/test-example/: cmake_install.cmake  test-example  test-example.hex
_build/unit-tests/test-suites/test-ledctrl/: cmake_install.cmake  test-ledctrl  test-ledctrl.hex
app/: .gdbinit  CMakeLists.txt  main.c
modules/: CMakeLists.txt  ledctrl.c  ledctrl.h  ticks.c  ticks.h
nRF5_SDK_17/examples/peripheral/uart/pca10056/blank/armgcc/_build/: nrf52840_xxaa.hex  nrf52840_xxaa.in  nrf52840_xxaa.map  nrf52840_xxaa.out
nRF5_SDK_17/examples/peripheral/uart/pca10056/blank/armgcc/_build/nrf52840_xxaa/: app_error.c.d  app_error_handler_gcc.c.d  app_error_weak.c.d  app_fifo.c.d  app_uart_fifo.c.d  app_util_platform.c.d  boards.c.d  main.c.d  nrf_assert.c.d  nrf_atomic.c.d  nrf_balloc.c.d  nrf_drv_uart.c.d  nrf_fprintf.c.d  nrf_fprintf_format.c.d  nrf_log_frontend.c.d  nrf_log_str_formatter.c.d  nrf_memobj.c.d  nrf_ringbuf.c.d  nrf_strerror.c.d  nrfx_atomic.c.d  nrfx_prs.c.d  nrfx_uart.c.d  nrfx_uarte.c.d  retarget.c.d  system_nrf52840.c.d
python_tests/: tester.py
unit-tests/: unity_config.c
unit-tests/test-suites/test-example/: .gdbinit  CMakeLists.txt  main_example.c  test1.c
unit-tests/test-suites/test-ledctrl/: CMakeLists.txt  test_ledctrl.c
